changes on add risk

--- a/FRAProject/Areas/Administration/Views/RiskManagement/AddNewRisk.cshtml
+++ b/FRAProject/Areas/Administration/Views/RiskManagement/AddNewRisk.cshtml
@@ -27,7 +27,11 @@
                         <input asp-for="Organization" id="Organization" class="form-control textFWith400" />
 
                         <label asp-for="EntryDate" class="textFWith110">Date</label>
-                        <input asp-for="EntryDate" id="EntryDate" class="form-control textFWith300" />
+                        <div id="date-container1" style="width: 300px">
+                            <div class="input-group date">
+                                <input asp-for="EntryDate" type="text" id="EntryDate" class="form-control textFWith300"><span class="input-group-addon dateButton"><i class="fal fa-calendar-alt" style="font-size: 25px"></i></span>
+                            </div> 
+                        </div>                                               
                     </div>
 
                 </div>
@@ -62,8 +66,12 @@
                         <label asp-for="SurveyorEmail" class="textFWith110">Email</label>
                         <input asp-for="SurveyorEmail" id="SurveyorEmail" class="form-control textFWith400" />
 
-                        <label asp-for="SurveyDate" class="textFWith110">Date </label>
-                        <input asp-for="SurveyDate" id="SurveyDate" class="form-control textFWith300" />
+                        <label asp-for="SurveyDate" class="textFWith110">Date </label>                        
+                        <div id="date-container2" style="width: 300px">
+                            <div class="input-group date">
+                                <input asp-for="SurveyDate" id="SurveyDate" class="form-control textFWith300" /><span class="input-group-addon dateButton"><i class="fal fa-calendar-alt" style="font-size: 25px"></i></span>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <!-- End Site Surveyor input -->
@@ -87,7 +95,7 @@
                 </div>
                 <div class="form-group row">
                     <div class="inlineForm">
-                        <label asp-for="SiteAdress" class="textFWith110">Adress </label>
+                        <label asp-for="SiteAdress" class="textFWith110">Address </label>
                         <input asp-for="SiteAdress" id="SiteAdress" class="form-control textWith100" />
                     </div>
                 </div>
