--- a/FRAProject/Areas/Administration/Views/Shared/_MainLayout.cshtml
+++ b/FRAProject/Areas/Administration/Views/Shared/_MainLayout.cshtml
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="~/css/Login.css" />
         <link rel="stylesheet" href="~/css/Main.css" />
         <link rel="stylesheet" type="text/css" href="~/css/accordion.css" asp-append-version="true" />
+        <link rel="stylesheet" type="text/css" href="~/css/bootstrap-datepicker3.css" asp-append-version="true" />
 
     </environment>
 
@@ -38,6 +39,7 @@
     <script type="text/javascript" src="~/js/popper.js" asp-append-version="true"></script>
     <script type="text/javascript" src="~/lib/bootstrap-V4/js/bootstrap.min.js" asp-append-version="true"></script>
     <script type="text/javascript" src="~/js/decimalAdjust.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="~/js/bootstrap-datepicker.js" asp-append-version="true"></script>
 </environment>
 
 @RenderSection("Scripts", required: false)
