--- a/FRAProject/wwwroot/css/RiskManagement.css
+++ b/FRAProject/wwwroot/css/RiskManagement.css
@@ -126,3 +126,11 @@
     padding-top: 10px;
 }
 
+
+.dateButton{
+    position: absolute;
+    padding-top: 6px;
+    min-width: 16px;
+    line-height: 1.42857143;
+    margin-left: -30px;    
+}
