--- a/FRAProject/Views/Home/Index.cshtml
+++ b/FRAProject/Views/Home/Index.cshtml
@@ -3,11 +3,11 @@
 }
 
 @section Css {
-    <link rel="stylesheet" href="~/lib/bootstrap-V4/css/bootstrap.css" />
-    <link rel="stylesheet" href="~/css/jquery.mCustomScrollbar.min.css" />
-    <link rel="stylesheet" href="~/css/All.css" />
-    <link rel="stylesheet" href="~/css/custom.css" />
-    <link rel="stylesheet" href="~/css/custom-themes.css" />  
+    <link rel="stylesheet" href="~/lib/bootstrap-V4/css/bootstrap.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/jquery.mCustomScrollbar.min.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/All.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/custom.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/custom-themes.css" asp-append-version="true"/>  
 }
 
 <div class="ImgLogoLogin"></div>
@@ -31,11 +31,10 @@
                         <img class="img-responsive img-rounded" src="~/images/user.jpg" alt="User picture">
                     </div>
                     <div class="user-info">
-                        <span class="user-name">
-                            Admin
-                            <strong>Admin</strong>
+                        <span>
+                            <strong>Roy Catayas</strong>
                         </span>
-                        <span class="user-role">Administrator</span>                        
+                        <span class="user-role">Administrator</span>
                     </div>
                 </div>
                 
