--- a/FRAProject/Views/Shared/_LoginLayout.cshtml
+++ b/FRAProject/Views/Shared/_LoginLayout.cshtml
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Risk Assessment</title>
 
-    <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap-V4/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/Login.css" />        
-    </environment>
+    <link rel="stylesheet" href="~/lib/bootstrap-V4/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/css/Login.css" />       
    
 </head>
 <body>
@@ -21,11 +19,9 @@
     
 </div>
 
-<environment include="Development">
-    <script src="~/lib/jquery/dist/jquery.js"></script>
-    <script src="~/lib/bootstrap-V4/js/bootstrap.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-</environment>
+<script src="~/lib/jquery/dist/jquery.js" asp-append-version="true"></script>
+<script src="~/lib/bootstrap-V4/js/bootstrap.min.js" asp-append-version="true"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
 
 @RenderSection("Scripts", required: false)
 </body>
