change some design

--- a/FRAProject/Areas/Administration/Views/RiskManagement/Index.cshtml
+++ b/FRAProject/Areas/Administration/Views/RiskManagement/Index.cshtml
@@ -56,8 +56,8 @@
                             </a>
                             <div class="sidebar-submenu" style="display: block;">
                                 <ul>
-                                    <li>
-                                        <a href="#">Risk Assessment</a>
+                                    <li>                                        
+                                        <a asp-area="administration" asp-controller="RiskManagement" asp-action="Index">Risk Assessment</a>
                                     </li>
                                     <li>
                                         <a href="#">History</a>
@@ -134,7 +134,7 @@
                             <div class="sidebar-submenu">
                                 <ul>
                                     <li>
-                                        <a href="#">Manage User</a>
+                                        <a asp-area="administration" asp-controller="Users" asp-action="Index">Manage User</a>
                                     </li>
                                 </ul>
                             </div>
