--- a/FRAProject/Views/Home/Index.cshtml
+++ b/FRAProject/Views/Home/Index.cshtml
@@ -128,7 +128,7 @@
                             <div class="sidebar-submenu">
                                 <ul>
                                     <li>
-                                        <a href="#">Manage User</a>
+                                        <a asp-area="administration" asp-controller="Users" asp-action="Index">Manage User</a>
                                     </li>                                    
                                 </ul>
                             </div>
