--- a/FRAProject/wwwroot/css/UserSetting.css
+++ b/FRAProject/wwwroot/css/UserSetting.css
@@ -17,6 +17,14 @@
     padding-right: 5px;
 }
 
+.pb10 {
+    padding-bottom: 10px;
+}
+
+.wCal5 {
+    width: calc(100% - 5px);
+}
+
 .CommandColWidth {
     width: 200px;
 }
