--- a/FRAProject/Areas/Administration/Views/Users/AddUser.cshtml
+++ b/FRAProject/Areas/Administration/Views/Users/AddUser.cshtml
@@ -1,59 +1,70 @@
 ﻿@using FRA.Web.Models
 @model FRA.Web.Areas.Administration.Models.AddUserViewModel
 
-<form asp-controller="Users" asp-action="AddUser" name="form" class="form-validation" method="post">
+<form name="form">
     @await Html.PartialAsync("_ModalHeader", new ModalHeader { Heading = "Add User" })
-    <div class="modal-body form-horizontal userModalForm" >
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="form-group userModalForm">
-                    <label asp-for="FirstName" class="col-lg-3 col-sm-3 control-label"></label>
-                    <div class="col-lg-6">
-                        <input asp-for="FirstName" class="form-control" />
-                    </div>
-                </div>
-                <div class="form-group userModalForm">
-                    <label asp-for="LastName" class="col-lg-3 col-sm-3 control-label"></label>
-                    <div class="col-lg-6">
-                        <input asp-for="LastName" class="form-control" />
-                    </div>
-                </div>
-                <div class="form-group userModalForm">
-                    <label asp-for="Email" class="col-lg-3 col-sm-3 control-label"></label>
-                    <div class="col-lg-6">
-                        <input asp-for="Email" class="form-control" />
-                    </div>
-                </div>
-                <div class="form-group userModalForm">
-                    <label asp-for="Password" class="col-lg-3 col-sm-3 control-label"></label>
-                    <div class="col-lg-6">
-                        <input type="password" asp-for="Password" class="form-control" />
-                    </div>
-                </div>
-                <div class="form-group userModalForm">
-                    <label asp-for="Address" class="col-lg-3 col-sm-3 control-label"></label>
-                    <div class="col-lg-6">
-                        <input asp-for="Address" class="form-control" />
-                    </div>
-                </div>
-                <div class="form-group userModalForm">
-                    <label asp-for="PhoneNumber" class="col-lg-3 col-sm-3 control-label"></label>
-                    <div class="col-lg-6">
-                        <input asp-for="PhoneNumber" class="form-control" />
-                    </div>
-                </div>
-                <div class="form-group userModalForm">
-                    <label asp-for="Orginization" class="col-lg-3 col-sm-3 control-label"></label>
-                    <div class="col-lg-6">
-                        <input asp-for="Orginization" class="form-control" />
-                    </div>
+    
+    <div class="modal-body userModalForm">
+        <!-- Begin User input -->
+        <div class="form">
+            <div class="form-group row">
+                <div class="inlineForm">
+                    <label asp-for="FirstName" class="textFWith120">First Name</label>
+                    <input id="idFirstName" asp-for="FirstName" class="form-control textWith150" />
                 </div>
             </div>
-            
+
+            <div class="form-group row">
+                <div class="inlineForm">
+                    <label asp-for="LastName" class="textFWith120">Last Name</label>
+                    <input id="idLastName" asp-for="LastName" class="form-control textWith150" />
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div class="inlineForm">
+                    <label asp-for="Email" class="textFWith120">Email</label>
+                    <input id="idEmail" asp-for="Email" class="form-control textWith150" />
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div class="inlineForm">
+                    <label asp-for="Password" class="textFWith120">Password</label>
+                    <input id="idPassword" asp-for="Password" class="form-control textWith150" />
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div class="inlineForm">
+                    <label asp-for="Address" class="textFWith120">Address</label>
+                    <input id="idAddress" asp-for="Address" class="form-control textWith150" />
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div class="inlineForm">
+                    <label asp-for="PhoneNumber" class="textFWith120">Phone Number</label>
+                    <input id="idPhoneNumber" asp-for="PhoneNumber" class="form-control textWith150" />
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div class="inlineForm">
+                    <label asp-for="Orginization" class="textFWith120">Orginization</label>
+                    <input id="idOrginization" asp-for="Orginization" class="form-control textWith150" />
+                </div>
+            </div>
+
         </div>
+        <!-- End User input -->
     </div>
-    @await Html.PartialAsync("_ModalFooter", new ModalFooter { })
+        
 </form>
+<div class="modal-footer">
+    <button class="btn btn-success" id="AddUser" onclick="AddUser()">Submit</button>
+    <button id="Cancel" class="btn btn-secondary" type="button" onclick="cancelUser()">Cancel</button>
+</div>
 
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
