--- a/FRAProject/Areas/Administration/Views/Users/EditUser.cshtml
+++ b/FRAProject/Areas/Administration/Views/Users/EditUser.cshtml
@@ -8,9 +8,28 @@
     <div class="modal-body userModalForm">
         <input type="hidden" asp-for="Id" />
         <input type="hidden" asp-for="Email" />
-        
+        <input type="hidden" asp-for="ApplicationRoleId" />
+
         <div class="form">
 
+            <div class="form-group row">
+                <div class="inlineForm">
+                    <label class="textFWith120">Select Role</label>
+                    <select class="custom-select textWith150" id="ApplicationRoleIdi">
+                        @foreach (var iRole in Model.ApplicationRoles)
+                        {
+                            if (Model.ApplicationRoleId== iRole.Key)
+                            {
+                                <option selected="selected" value="@iRole.Key">@iRole.Value</option>
+                            }
+                            else
+                            {
+                                <option value="@iRole.Key">@iRole.Value</option>
+                            }
+                        }
+                    </select>
+                </div>
+            </div>
             <div class="form-group row">
                 <div class="inlineForm">
                     <label asp-for="FirstName" class="textFWith120">First Name</label>
@@ -42,15 +61,15 @@
             <div class="form-group row">
                 <div class="inlineForm">
                     <label asp-for="LockoutEnabled" class="textFWith120">Lockout </label>
-                    <input id="idLockoutEnabled" asp-for="LockoutEnabled" class="form-control textWith150" type="checkbox"/>
+                    <input id="idLockoutEnabled" asp-for="LockoutEnabled" class="form-control textWith150" type="checkbox" />
                 </div>
             </div>
-            
+
         </div>
     </div>    
 </form>
 <div class="modal-footer">
-    <button class="btn btn-success" id="AddEdit" onclick="">Submit</button>
+    <button class="btn btn-success" id="AddEdit" onclick="EditUser()">Submit</button>
     <button id="Cancel" class="btn btn-secondary" type="button" onclick="cancelUser()">Cancel</button>
 </div>
 
