--- a/FRAProject/Views/Home/Index.cshtml
+++ b/FRAProject/Views/Home/Index.cshtml
@@ -109,7 +109,7 @@
                             <div class="sidebar-submenu">
                                 <ul>
                                     <li>
-                                        <a href="#">Category</a>
+                                        <a asp-area="administration" asp-controller="Category" asp-action="Index">Category</a>
                                     </li>
                                     <li>
                                         <a href="#">Section</a>
