--- a/FRAProject/Areas/Administration/Views/Category/DeleteCategory.cshtml
+++ b/FRAProject/Areas/Administration/Views/Category/DeleteCategory.cshtml
@@ -4,18 +4,16 @@
 
 <form role="form">
     <input type="hidden" asp-for="CategoryID" />
-    <input type="hidden" asp-for="CategoryName" />
-    
+
     @await Html.PartialAsync("_ModalHeader", new ModalHeader { Heading = "Delete Category" })
 
-    <div class="modal-body form-horizontal">
+    <div class="modal-body">
         Are you sure you want to delete <b>@Model.CategoryName</b>?
     </div>
 
 </form>
 
 <div class="modal-footer">
-    <button data-dismiss="modal" id="Cancel" class="btn btn-default" type="button">Cancel</button>
-    <button class="btn btn-success" id="deleteMDSection" onclick="DeleteCategory()">Submit</button>
+    <button class="btn btn-success" id="deleteUser" onclick="deleteCategory()">Submit</button>
+    <button id="Cancel" class="btn btn-secondary" type="button" onclick="cancelCategory()">Cancel</button>
 </div>
-
