--- a/FRAProject/Areas/Administration/Views/RiskManagement/Index.cshtml
+++ b/FRAProject/Areas/Administration/Views/RiskManagement/Index.cshtml
@@ -115,7 +115,7 @@
                             <div class="sidebar-submenu">
                                 <ul>
                                     <li>
-                                        <a href="#">Category</a>
+                                        <a asp-area="administration" asp-controller="Category" asp-action="Index">Category</a>
                                     </li>
                                     <li>
                                         <a href="#">Section</a>
