--- a/FRAProject/Areas/Administration/Views/Users/GetUser.cshtml
+++ b/FRAProject/Areas/Administration/Views/Users/GetUser.cshtml
@@ -25,7 +25,7 @@
                 <td>@iUser.LockoutEnabled</td>
                 <td>
                     <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modal-user" data-backdrop="static" data-keyboard="false" onclick="getUserToEdit('@iUser.Id')"><i class="fal fa-edit pr3"></i> Edit</button>
-                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-" data-backdrop="static" data-keyboard="false" onclick=""><i class="fal fa-trash-alt pr3"></i> Delete</button>
+                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-user" data-backdrop="static" data-keyboard="false" onclick="getUserToDelete('@iUser.Id')"><i class="fal fa-trash-alt pr3"></i> Delete</button>
                 </td>
             </tr>
         }            
