fix section module and links

--- a/FRAProject/Areas/Administration/Views/Category/DeleteCategory.cshtml
+++ b/FRAProject/Areas/Administration/Views/Category/DeleteCategory.cshtml
@@ -14,6 +14,6 @@
 </form>
 
 <div class="modal-footer">
-    <button class="btn btn-success" id="deleteUser" onclick="deleteCategory()">Submit</button>
+    <button class="btn btn-success" id="deleteCategory" onclick="deleteCategory()">Submit</button>
     <button id="Cancel" class="btn btn-secondary" type="button" onclick="cancelCategory()">Cancel</button>
 </div>
