--- a/FRAProject/Areas/Administration/Views/Category/Index.cshtml
+++ b/FRAProject/Areas/Administration/Views/Category/Index.cshtml
@@ -117,7 +117,7 @@
                                         <a asp-area="administration" asp-controller="Category" asp-action="Index">Category</a>
                                     </li>
                                     <li>
-                                        <a href="#">Section</a>
+                                        <a asp-area="administration" asp-controller="Section" asp-action="Index">Section</a>
                                     </li>
                                     <li>
                                         <a href="#">Risk</a>
@@ -153,7 +153,7 @@
                             System management for Categories
                         </div>
                         <div class="topUserDiv alignRightTopDiv" style="margin-right: 45px;">
-                            <button id="btnNewsCategory" data-toggle="modal" data-target="#modal-category" data-backdrop="static" data-keyboard="false" class="btn btn-lg btn-light" onclick="getViewForAddCategory()"><i class="fal fa-list-alt newkButton"></i> Create New Category</button>
+                            <button id="btnNewsCategory" data-toggle="modal" data-target="#modal-category" data-backdrop="static" data-keyboard="false" class="btn btn-lg btn-light" onclick="getViewForAddCategory()"><i class="fal fa-list-alt newButton"></i> Create New Category</button>
                         </div>
                     </div>
 
