--- a/FRAProject/Areas/Administration/Views/RiskManagement/Index.cshtml
+++ b/FRAProject/Areas/Administration/Views/RiskManagement/Index.cshtml
@@ -118,7 +118,7 @@
                                         <a asp-area="administration" asp-controller="Category" asp-action="Index">Category</a>
                                     </li>
                                     <li>
-                                        <a href="#">Section</a>
+                                        <a asp-area="administration" asp-controller="Section" asp-action="Index">Section</a>
                                     </li>
                                     <li>
                                         <a href="#">Risk</a>
