--- a/FRAProject/Views/Home/Index.cshtml
+++ b/FRAProject/Views/Home/Index.cshtml
@@ -112,7 +112,7 @@
                                         <a asp-area="administration" asp-controller="Category" asp-action="Index">Category</a>
                                     </li>
                                     <li>
-                                        <a href="#">Section</a>
+                                        <a asp-area="administration" asp-controller="Section" asp-action="Index">Section</a>
                                     </li>
                                     <li>
                                         <a href="#">Risk</a>
